# sp_scenario_2

./: CMakeLists.txt  README.md  package.xml  ros2.repos
config/: bringup_r2.rviz  bringup_r3.rviz
launch/: bringup.launch.py  bringup_r1.launch.py  bringup_r2.launch.py  bringup_r3.launch.py  bringup_simple.launch.py  opc_bringup.launch.py  opc_bringup_r1.launch.py  opc_bringup_r3.launch.py
meshes/: box_table.stl  piab_tool.stl  plate_with_camera.stl  stand.stl  suction_cup.stl  vention_stand.stl
robots/case_r1/: general.json
robots/case_r2/: general.json
robots/case_r3/: general.json
robots/ursim3e/: general.json
scenario/: base_link.json  d435.json  d435_camera.json  faste_d435.json  ghost_d435_camera.json  ghost_robotiq_2f_base_link.json  robotiq_2f_base_link.json
scenario_r1/: ghost_base_link.json  ghost_piab_tool.json  ghost_suction_cup_2.json  grundmodul.json  pick_pos_1.json  place_pos_1.json  plate_with_camera.json
scenario_r2/: above_locked_aruco.json  above_pose_1.json  above_pose_2.json  d435_camera.json  d435_rgb.json  ghost_plate_with_camera.json  home_pose.json  pose_1.json  pose_2.json  testasdf.json
scenario_r3/: floor.json  ghost_plate_with_camera.json  ghost_suction_cup_1.json  piab_tool.json  pose_2.json  suction_cup_1.json  suction_cup_2.json  vention_stand.json
